# fourget

./: .bumpversion.cfg  .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ci/: poetry-requirements.in  poetry-requirements.txt
fourget/: __init__.py  __main__.py  console.py  exception.py  fourget.py  log.py  queue.py  resource.py  run.py
tests/: __init__.py  test_fourget.py
